# pyvista-xarray

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt  requirements_style.txt  setup.py
.binder/: postBuild  requirements.txt  start
.github/: dependabot.yml
.github/workflows/: docker.yml  lint.yml  release.yml  test.yml
examples/: atmospheric_levels.ipynb  cartographic.ipynb  data-cube.ipynb  introduction.ipynb  level_of_detail.py  level_of_detail_geovista.py  lightning.ipynb  ocean_model.ipynb  radar.ipynb  requirements.txt  sea_temps.ipynb  simple.ipynb
examples/data/: oisst-avhrr-v02r01.19810901.nc
pvxarray/: __init__.py  _version.py  accessor.py  cf.py  errors.py  io.py  knowledge.py  points.py  reader.py  rectilinear.py  report.py  structured.py  utils.py  vtk_source.py  widgets.py
tests/: conftest.py  test_base.py  test_cf.py  test_dataset_accessor.py  test_dataset_io.py  test_points.py  test_rectilinear.py  test_soa.py  test_source.py  test_structured.py
tests/data/: air_temperature.vtr  structured.vts  wavelet.vti
