[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
authors = [{ name = "The PyVista Developers", email = "info@pyvista.org" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
]
dependencies = ["pyvista>=0.37", "scooby", "xarray>=2022.12.0"]
description = "xarray DataArray accessors for PyVista"
license = "Apache-2.0"
name = "pyvista-xarray"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.7"

[project.entry-points."xarray.backends"]
pyvista = "pvxarray.io:PyVistaBackendEntrypoint"

[project.urls]
Homepage = "https://github.com/pyvista/pyvista-xarray"

[tool.setuptools.packages.find]
include = ["pvxarray*"]

[tool.black]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist|node_modules'
line-length = 100
skip-string-normalization = false
target-version = ["py310"]

[tool.codespell]
quiet-level = 3
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.ply,*.vtk,*.vti,*.vtu,*.vts,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,doc/_build/*,./dist/*,*~,.hypothesis*,*.mypy_cache/*,*cover,'

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
line_length = 100
profile = "black"

[tool.pytest.ini_options]
filterwarnings = ["ignore::pvxarray.DataCopyWarning"]
