[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
authors = [{ name = "The PyVista Developers", email = "info@pyvista.org" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
]
dependencies = ["cf-xarray", "pyvista>=0.37", "scooby", "xarray>=2022.12.0"]
description = "xarray DataArray accessors for PyVista"
license = "Apache-2.0"
name = "pyvista-xarray"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.8"

[project.entry-points."xarray.backends"]
pyvista = "pvxarray.io:PyVistaBackendEntrypoint"

[project.urls]
Homepage = "https://github.com/pyvista/pyvista-xarray"

[tool.setuptools.packages.find]
include = ["pvxarray*"]

[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist"]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "PERF", # perflint
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.codespell]
quiet-level = 3
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.ply,*.vtk,*.vti,*.vtu,*.vts,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,doc/_build/*,./dist/*,*~,.hypothesis*,*.mypy_cache/*,*cover,'

[tool.coverage.run]
source = ["pvxarray"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
omit = ["pvxarray/widgets.py"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::pvxarray.DataCopyWarning"]
